--- a/Resource/template/default/confirm.twig
+++ b/Resource/template/default/confirm.twig
@@ -85,7 +85,7 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
                             <button type="submit" class="btn btn-primary btn-block">完了ページヘ</button>
                         </p>
                         <p>
-                            <button type="submit" class="btn btn-info btn-block" name="mode" value="back">戻る</button>
+                            <a href="{{ url('product_detail', {'id':Product.id}) }}" class="btn btn-info btn-block">戻る</a>
                         </p>
                     </div>
                 </div>
