--- a/Resource/template/default/confirm.twig
+++ b/Resource/template/default/confirm.twig
@@ -29,7 +29,6 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
     <div class="row">
         <div class="col-md-10 col-md-offset-1">
             <form method="post" action="{{ url('products_detail_review', { id : Product.id }) }}">
-                <input type="hidden" name="mode" value="complete">
                 {{ form_widget(form._token) }}
                 <div class="dl_table">
                     <dl>
@@ -82,10 +81,10 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
                 <div class="row no-padding">
                     <div class="btn_group col-sm-offset-4 col-sm-4">
                         <p>
-                            <button type="submit" class="btn btn-primary btn-block">完了ページヘ</button>
+                            <button type="submit" class="btn btn-primary btn-block" name="mode" value="complete">完了ページヘ</button>
                         </p>
                         <p>
-                            <a href="{{ url('product_detail', {'id':Product.id}) }}" class="btn btn-info btn-block">戻る</a>
+                            <button type="submit" class="btn btn-info btn-block" name="mode" value="back">戻る</button>
                         </p>
                     </div>
                 </div>
