Fix issue #4. Review display place

--- a/Resource/template/default/product_review.twig
+++ b/Resource/template/default/product_review.twig
@@ -20,7 +20,7 @@ along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #}
 
-<divs id="review_area" xmlns="http://www.w3.org/1999/html">
+<divs id="review_area" xmlns="http://www.w3.org/1999/html" class="col-sm-6" style="float: right;">
     <div class="btn_area">
         <ul class="row">
             <li class="col-xs-12 col-sm-8">
