--- a/Resource/template/default/confirm.twig
+++ b/Resource/template/default/confirm.twig
@@ -17,7 +17,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-10 col-md-offset-1">
-            <form method="post" action="{{ url('products_detail_review', { id : Product.id }) }}">
+            <form method="post" action="{{ url('plugin_products_detail_review', { id : Product.id }) }}">
                 {{ form_widget(form._token) }}
                 <div class="dl_table">
                     <dl>
