--- a/Resource/template/default/product_review.twig
+++ b/Resource/template/default/product_review.twig
@@ -13,7 +13,7 @@
     <div class="btn_area">
         <ul class="row">
             <li class="col-xs-12 col-sm-8">
-                <a href="{{ url('products_detail_review', {'id' : id}) }}" class="btn btn-success btn-block">新規コメントを書き込む</a>
+                <a href="{{ url('plugin_products_detail_review', {'id' : id}) }}" class="btn btn-success btn-block">新規コメントを書き込む</a>
             </li>
         </ul>
     </div>
