--- a/Resource/template/admin/edit.twig
+++ b/Resource/template/admin/edit.twig
@@ -23,7 +23,7 @@
 
 {% block main %}
     <div class="row" id="aside_wrap">
-        <form name="customer_form" role="form" id="customer_form" method="post" action="{{ url('admin_product_review_edit', { id : form.id.vars.value }) }}">
+        <form name="customer_form" role="form" id="customer_form" method="post" action="{{ url('plugin_admin_product_review_edit', { id : form.id.vars.value }) }}">
             {{ form_widget(form._token) }}
             {{ form_widget(form.id) }}
             <div class="col-md-9">
@@ -94,7 +94,7 @@
 
                 <div class="row hidden-xs hidden-sm">
                     <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 text-center btn_area">
-                        <p><a href="{{ url('admin_product_review') }}">検索画面に戻る</a></p>
+                        <p><a href="{{ url('plugin_admin_product_review') }}">検索画面に戻る</a></p>
                     </div>
                 </div>
 
