--- a/Resource/template/default/product_review.twig
+++ b/Resource/template/default/product_review.twig
@@ -8,39 +8,43 @@
  * file that was distributed with this source code.
  */
 #}
+<!--▼レビューエリア-->
+<div id="review_area" class="row">
+    <div class="col-sm-10 col-sm-offset-1">
+        <div class="accordion">
+            <dl>
+                <dt class="heading02 sp">この商品のレビュー<svg class="cb cb-angle-down"><use xlink:href="#cb-angle-down" /></svg></dt>
+                <dt class="heading02 pc active">この商品のレビュー<svg class="cb cb-angle-down"><use xlink:href="#cb-angle-down" /></svg></dt>
+                <dd>
+                    <div class="review_btn">
+                        <a href="{{ url('plugin_products_detail_review', {'id' : id}) }}" class="btn btn-info">レビューを書く</a>
+                    </div>
+                    {% if ProductReviews %}
+                    <ul class="review_list">
+                        {% for ProductReview in ProductReviews %}
+                            <li>
+                                <p class="review_date">
+                                    {% set url = 'javascript:void(0);' %}
+                                    {% if ProductReview.reviewer_url %}
+                                        {% set url = ProductReview.reviewer_url %}
+                                    {% endif %}
 
-<div id="review_area" xmlns="http://www.w3.org/1999/html">
-    <div class="btn_area">
-        <ul class="row">
-            <li class="col-xs-12 col-sm-8">
-                <a href="{{ url('plugin_products_detail_review', {'id' : id}) }}" class="btn btn-success btn-block">新規コメントを書き込む</a>
-            </li>
-        </ul>
+                                    {{ ProductReview.create_date|date_format }}
+
+                                    <a href="{{ url }}">{{ ProductReview.reviewer_name }}さん</a>
+                                    {% set star = 5 - ProductReview.recommend_level %}
+                                    <span><span class="recommend_level">{% for i in 1..ProductReview.recommend_level %}★{% endfor %}</span><span>{% for i in 1..star %}☆{% endfor %}</span></span>
+                                </p>
+                                <h4 class="heading04">{{ ProductReview.title }}</h4>
+                                <p>{{ ProductReview.comment }}</p>
+                            </li>
+                        {% endfor %}
+                    </ul>
+                    {% endif %}
+                </dd>
+            </dl>
+        </div>
     </div>
-    {% if ProductReviews %}
-        <div>この商品に対するお客様の声</div>
-        <ul class="review_list">
-        {% for ProductReview in ProductReviews %}
-            <li>
-                <h3>{{ ProductReview.title }}</h3>
-                <p>
-                    <span>
-                        投稿日：{{ ProductReview.create_date|date_format }}
-                    </span>
-                    <span>
-                        {% set url = 'javascript:void(0);' %}
-                        {% if ProductReview.reviewer_url %}
-                            {% set url = ProductReview.reviewer_url %}
-                        {% endif %}
-                    投稿者：<a href="{{ url }}">{{ ProductReview.reviewer_name }}</a>
-                    </span>
-                    <span class="recommend_level">おすすめレベル：
-                        <span>{% for i in 1..ProductReview.recommend_level %}★{% endfor %}</span>
-                    </span>
-                </p>
-                <p>{{ ProductReview.comment }}</p>
-            </li>
-        {% endfor %}
-        </ul>
-    {% endif %}
 </div>
+<!-- ▲レビューエリア -->
+
