--- a/Resource/template/default/index.twig
+++ b/Resource/template/default/index.twig
@@ -29,7 +29,7 @@
                         </dd>
                     </dl>
                     <dl>
-                        <dt>{{ form_label(form.reviewer_name) }}<span class="required">必須</span></dt>
+                        <dt>{{ form_label(form.reviewer_name) }}</dt>
                         <dd class="form-group">
                             {{ form_widget(form.reviewer_name) }}
                             {{ form_errors(form.reviewer_name) }}
@@ -43,7 +43,7 @@
                         </dd>
                     </dl>
                     <dl>
-                        <dt>{{ form_label(form.recommend_level) }}<span class="required">必須</span></dt>
+                        <dt>{{ form_label(form.recommend_level) }}</dt>
                         <dd class="form-group">
                             {{ form_widget(form.recommend_level) }}
                             {{ form_errors(form.recommend_level) }}
@@ -59,14 +59,14 @@
                         </dd>
                     </dl>
                     <dl>
-                        <dt>{{ form_label(form.title) }}<span class="required">必須</span></dt>
+                        <dt>{{ form_label(form.title) }}</dt>
                         <dd class="form-group">
                             {{ form_widget(form.title) }}
                             {{ form_errors(form.title) }}
                         </dd>
                     </dl>
                     <dl>
-                        <dt>{{ form_label(form.comment) }}<span class="required">必須</span></dt>
+                        <dt>{{ form_label(form.comment) }}</dt>
                         <dd class="form-group">
                             <div class="column">
                             {{ form_widget(form.comment, {'attr': {'rows': '6'}}) }}
