--- a/Resource/template/default/product_review.twig
+++ b/Resource/template/default/product_review.twig
@@ -8,6 +8,16 @@
  * file that was distributed with this source code.
  */
 #}
+<style type="text/css">
+    #review_area .review_list span.recommend_level {
+        color: #DE5D50;
+    }
+    #review_area .review_list {
+        max-height: 500px;
+        overflow: auto;
+    }
+</style>
+
 <!--▼レビューエリア-->
 <div id="review_area" class="row">
     <div class="col-sm-10 col-sm-offset-1">
