--- a/Resource/template/admin/edit.twig
+++ b/Resource/template/admin/edit.twig
@@ -41,7 +41,7 @@
                                 {{ form_label(form.create_date) }}
                                 <div class="col-sm-9 col-lg-10">
                                     <div class="form-inline">
-                                        {{ form.create_date.vars.value|date('Y/m/d H:i') }}
+                                        {{ post_date|date('Y/m/d H:i') }}
                                     </div>
                                 </div>
                             </div>
@@ -94,7 +94,7 @@
 
                 <div class="row hidden-xs hidden-sm">
                     <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 text-center btn_area">
-                        <p><a href="{{ url('plugin_admin_product_review') }}">検索画面に戻る</a></p>
+                        <p><a href="{{ url('plugin_admin_product_review_page', { page_no: app.session.get('plugin.product_review.admin.product_review.search.page_no')|default('1') }) }}?resume=1">検索画面に戻る</a></p>
                     </div>
                 </div>
 
