--- a/Resource/template/default/product_review.twig
+++ b/Resource/template/default/product_review.twig
@@ -9,7 +9,7 @@
  */
 #}
 <style type="text/css">
-    #review_area .review_list span.recommend_level {
+    #review_area span.recommend_level {
         color: #DE5D50;
     }
     #review_area .review_list {
@@ -23,8 +23,21 @@
     <div class="col-sm-10 col-sm-offset-1">
         <div class="accordion">
             <dl>
-                <dt class="heading02 sp">この商品のレビュー<svg class="cb cb-angle-down"><use xlink:href="#cb-angle-down" /></svg></dt>
-                <dt class="heading02 pc active">この商品のレビュー<svg class="cb cb-angle-down"><use xlink:href="#cb-angle-down" /></svg></dt>
+                {% set star = 5 - avg %}
+                <dt class="heading02 sp">この商品のレビュー
+                    <span><span class="recommend_level">{% for i in 1..avg %}★{% endfor %}</span><span>{% for i in 1..star %}☆{% endfor %}</span>
+                    <span>
+                        ({{ number }})
+                    </span>
+                    </span>
+                    <svg class="cb cb-angle-down"><use xlink:href="#cb-angle-down" /></svg></dt>
+                <dt class="heading02 pc active">この商品のレビュー
+                    <span><span class="recommend_level">{% for i in 1..avg %}★{% endfor %}</span><span>{% for i in 1..star %}☆{% endfor %}</span>
+                    <span>
+                        ({{ number }})
+                    </span>
+                    </span>
+                    <svg class="cb cb-angle-down"><use xlink:href="#cb-angle-down" /></svg></dt>
                 <dd>
                     <div class="review_btn">
                         <a href="{{ url('plugin_products_detail_review', {'id' : id}) }}" class="btn btn-info">レビューを書く</a>
