--- a/Resource/template/default/product_review.twig
+++ b/Resource/template/default/product_review.twig
@@ -16,6 +16,11 @@
         max-height: 500px;
         overflow: auto;
     }
+    @media only screen and (max-width: 768px) {
+        #review_area dl {
+            padding-bottom: 8px;
+        }
+    }
 </style>
 
 <!--▼レビューエリア-->
