--- a/Resource/template/default/error.twig
+++ b/Resource/template/default/error.twig
@@ -10,7 +10,7 @@
 #}
 {% extends 'default_frame.twig' %}
 
-{% set body_class = 'product_page' %}
+{% set body_class = 'product_review_page' %}
 
 {% block main %}
     <h1 class="page-heading">お客様の声書き込みエラー</h1>
