--- a/Resource/template/default/complete.twig
+++ b/Resource/template/default/complete.twig
@@ -10,7 +10,7 @@
 #}
 {% extends 'default_frame.twig' %}
 
-{% set body_class = 'product_page' %}
+{% set body_class = 'product_review_page' %}
 
 {% block main %}
 <div class="container-fluid">
@@ -21,16 +21,16 @@
                 <div id="deliveradd_input" class="row">
                     <div class="col-sm-10 col-sm-offset-1">
                         <div class="complete_message">
-                            <h2 class="heading01">ご利用ありがとうございました。</h2>
+                            <h2 class="heading01">書き込みありがとうございました。</h2>
                             <p>
-                                弊社にて登録内容を確認後、ホームページに反映させていただきます。
+                                弊社にて書き込み内容を確認後、ホームページに反映させていただきます。<br>
                                 今しばらくお待ちくださいませ。
                             </p>
                         </div>
                         <div class="row no-padding">
                             <div class="btn_group col-sm-offset-4 col-sm-4">
                                 <p>
-                                    <a href="{{ url('product_detail', {'id': id}) }}" class="btn btn-info btn-block">製品の詳細に戻る</a>
+                                    <a href="{{ url('product_detail', {'id': id}) }}" class="btn btn-info btn-block">商品ページに戻る</a>
                                 </p>
                             </div>
                         </div>
