--- a/Resource/template/default/product_review.twig
+++ b/Resource/template/default/product_review.twig
@@ -8,69 +8,178 @@
  * file that was distributed with this source code.
  */
 #}
+
+{# 星テキスト生成用マクロ #}
+{% macro stars(positive, negative) %}
+    {% set positive_stars = ["", "★", "★★", "★★★", "★★★★", "★★★★★"] %}
+    {% set negative_stars = ["", "☆", "☆☆", "☆☆☆", "☆☆☆☆", "☆☆☆☆☆"] %}
+    {{ positive_stars[positive] }}{{ negative_stars[negative] }}
+{% endmacro %}
+
 <style type="text/css">
-    #review_area span.recommend_level {
+    #product_review_area {
+        border-top: 1px solid #E8E8E8;
+        padding-bottom: 0;
+    }
+    #product_review_area dl dt {
+        padding: 16px 0;
+        cursor: pointer;
+    }
+    #product_review_area dl dt:hover {
+        color: #9797A0;
+    }
+    #product_review_area dl dt.active .cb {
+        transform: rotate(180deg);
+    }
+    #product_review_area dl dt .cb {
+        position: absolute;
+        right: 16px;
+        top: 17px;
+    }
+    #product_review_area dl dd {
+        display: none;
+        padding-bottom: 0;
+    }
+    #product_review_area .review_btn a {
+        margin: 0 auto;
+        padding: 16px;
+        width: 100%;
+    }
+    #product_review_area .review_list {
+        padding: 8px 0;
+    }
+    #product_review_area .review_list li {
+        padding: 8px 0;
+    }
+    #product_review_area .review_list p {
+        margin: 0px 0;
+    }
+    #product_review_area .review_list .review_date {
+        font-weight: bold;
+    }
+    #product_review_area .recommend_average {
+        margin-left: 16px;
         color: #DE5D50;
     }
-    #review_area .review_list {
-        max-height: 500px;
-        overflow: auto;
+    #product_review_area .review_list .recommend_level {
+        margin-left: 16px;
+        color: #DE5D50;
     }
-    @media only screen and (max-width: 768px) {
-        #review_area dl {
-            padding-bottom: 8px;
+    #product_review_area .review_list .recommend_name {
+        margin-left: 16px;
+    }
+    
+    @media only screen and (min-width: 768px) {
+        #product_review_area {
+            border-top: none;
+            padding-bottom: 16px;
+        }
+        #product_review_area dl dt {
+            padding: 16px;
+        }
+        #product_review_area dl dt .cb {
+            position: absolute;
+            right: 32px;
+            top: 24px;
+            font-size: 16px;
+            font-size: 1.6rem;
+        }
+        #product_review_area dl dd {
+            display: block;
+            padding: 0 16px 0;
+        }
+        #product_review_area .review_btn {
+            padding: 16px 0 0;
+            text-align: center;
+        }
+        #product_review_area .review_btn a {
+            width: auto;
+            min-width: 350px;
+        }
+        #product_review_area .review_list li {
+            padding: 8px 0;
+        }
+        #product_review_area .review_list p {
+            margin: 0px 0;
         }
     }
 </style>
 
 <!--▼レビューエリア-->
-<div id="review_area" class="row">
+<div id="product_review_area" class="row">
     <div class="col-sm-10 col-sm-offset-1">
         <div class="accordion">
             <dl>
-                {% set star = 5 - avg %}
-                <dt class="heading02 sp">この商品のレビュー
-                    <span>{% if avg %}<span class="recommend_level">{% for i in 1..avg %}★{% endfor %}</span>{% endif %}{% if star %}<span>{% for i in 1..star %}☆{% endfor %}</span>{% endif %}
+                {% set positive_avg_star = avg %}
+                {% set nagative_avg_star = 5 - positive_avg_star %}
+                <dt class="heading02 sp">
+                    この商品のレビュー
+                    
+                    <!--平均の星の数-->
+                    <span class="recommend_average">
+                        {{ _self.stars(positive_avg_star, nagative_avg_star) }}
+                    </span>
+                    
+                    <!--レビュー数-->
                     <span>
                         ({{ number }})
                     </span>
+                    <svg class="cb cb-angle-down"><use xlink:href="#cb-angle-down" /></svg>
+                </dt>
+                <dt class="heading02 pc active">
+                    この商品のレビュー
+                    
+                    <!--平均の星の数-->
+                    <span class="recommend_average">
+                        {{ _self.stars(positive_avg_star, nagative_avg_star) }}
                     </span>
-                    <svg class="cb cb-angle-down"><use xlink:href="#cb-angle-down" /></svg></dt>
-                <dt class="heading02 pc active">この商品のレビュー
-                    <span>{% if avg %}<span class="recommend_level">{% for i in 1..avg %}★{% endfor %}</span>{% endif %}{% if star %}<span>{% for i in 1..star %}☆{% endfor %}</span>{% endif %}
+                    
+                    <!--レビュー数-->
                     <span>
                         ({{ number }})
                     </span>
-                    </span>
-                    <svg class="cb cb-angle-down"><use xlink:href="#cb-angle-down" /></svg></dt>
+                    <svg class="cb cb-angle-down"><use xlink:href="#cb-angle-down" /></svg>
+                </dt>
                 <dd>
-                    <div class="review_btn">
-                        <a href="{{ url('plugin_products_detail_review', {'id' : id}) }}" class="btn btn-info">レビューを書く</a>
-                    </div>
                     {% if ProductReviews %}
-                    <ul class="review_list">
-                        {% for ProductReview in ProductReviews %}
-                            <li>
-                                <p class="review_date">
-                                    {% set url = 'javascript:void(0);' %}
-                                    {% if ProductReview.reviewer_url %}
-                                        {% set url = ProductReview.reviewer_url %}
-                                    {% endif %}
-
-                                    {{ ProductReview.create_date|date_format }}
-
-                                    <a href="{{ url }}">{{ ProductReview.reviewer_name }}さん</a>
-                                    {% set star = 5 - ProductReview.recommend_level %}
-                                    <span>{% if ProductReview.recommend_level %}<span class="recommend_level">{% for i in 1..ProductReview.recommend_level %}★{% endfor %}</span>{% endif %}{% if star %}<span>{% for i in 1..star %}☆{% endfor %}</span>{% endif %}</span>
-                                </p>
-                                <h4 class="heading04">{{ ProductReview.title }}</h4>
-                                <p>{{ ProductReview.comment }}</p>
-                            </li>
-                        {% endfor %}
-                    </ul>
+                        <ul class="review_list">
+                            {% for ProductReview in ProductReviews %}
+                                <li>
+                                    <p class="review_date">
+                                        <!--投稿日-->
+                                        {{ ProductReview.create_date|date_format }}
+                                        
+                                        <!--投稿者-->
+                                        <span class="recommend_name">
+                                            {% if ProductReview.reviewer_url %}
+                                                <a href="{{ ProductReview.reviewer_url }}" target="_blank">{{ ProductReview.reviewer_name }}さん</a>
+                                            {% else %}
+                                                {{ ProductReview.reviewer_name }}さん
+                                            {% endif %}
+                                        </span>
+                                        
+                                        <!--星の数-->
+                                        {% set positive_star = ProductReview.recommend_level %}
+                                        {% set nagative_star = 5 - positive_star %}
+                                        <span class="recommend_level">
+                                            {{ _self.stars(positive_star, nagative_star) }}
+                                        </span>
+                                    </p>
+                                    
+                                    <!--タイトル-->
+                                    <strong>{{ ProductReview.title }}</strong>
+                                    
+                                    <!--レビューコメント-->
+                                    <p>{{ ProductReview.comment|nl2br }}</p>
+                                </li>
+                            {% endfor %}
+                        </ul>
                     {% endif %}
                 </dd>
             </dl>
+        </div>
+        <div class="review_btn">
+            <a href="{{ url('plugin_products_detail_review', {'id' : id}) }}" class="btn btn-info">レビューを書く</a>
         </div>
     </div>
 </div>
