--- a/Resource/template/admin/index.twig
+++ b/Resource/template/admin/index.twig
@@ -163,8 +163,8 @@ function fnChangeActionSubmit(action) {
                                 <li id="result_list_main__csv_menu" class="dropdown">
                                     <a id="result_list_main__csv_menu_toggle" class="dropdown-toggle" data-toggle="dropdown">CSVダウンロード<svg class="cb cb-angle-down icon_down"> <use xlink:href="#cb-angle-down" /></svg></a>
                                     <ul class="dropdown-menu">
-                                        <li><a id="product_review_download" href="{{ url('plugin_admin_product_review_download') }}">受注CSVダウンロード</a></li>
-                                        <li><a href="{{ url('admin_setting_shop_csv', { id : csv_type }) }}">受注CSV出力項目設定</a></li>
+                                        <li><a id="product_review_download" href="{{ url('plugin_admin_product_review_download') }}">CSVダウンロード</a></li>
+                                        <li><a href="{{ url('admin_setting_shop_csv', { id : csv_type }) }}">出力項目設定</a></li>
                                     </ul>
                                 </li>
                             </ul>
