--- a/Resource/template/default/complete.twig
+++ b/Resource/template/default/complete.twig
@@ -13,17 +13,18 @@
 {% set body_class = 'product_review_page' %}
 
 {% block main %}
+<h1 class="page-heading">レビューを書く</h1>
+
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-10 col-md-offset-1">
-            <h1 class="page-heading">お客様の声書き込み完了</h1>
             <div class="container-fluid">
                 <div id="deliveradd_input" class="row">
                     <div class="col-sm-10 col-sm-offset-1">
                         <div class="complete_message">
-                            <h2 class="heading01">書き込みありがとうございました。</h2>
+                            <h2 class="heading01">ありがとうございました。</h2>
                             <p>
-                                弊社にて書き込み内容を確認後、ホームページに反映させていただきます。<br>
+                                内容を確認後、反映させていただきます。<br>
                                 今しばらくお待ちくださいませ。
                             </p>
                         </div>
