--- a/Resource/template/default/confirm.twig
+++ b/Resource/template/default/confirm.twig
@@ -37,7 +37,7 @@
 {% endblock stylesheet %}
 
 {% block main %}
-<h1 class="page-heading">お客様の声書き込み</h1>
+<h1 class="page-heading">レビューを書く</h1>
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-10 col-md-offset-1">
