--- a/Resource/template/default/error.twig
+++ b/Resource/template/default/error.twig
@@ -13,7 +13,7 @@
 {% set body_class = 'product_review_page' %}
 
 {% block main %}
-    <h1 class="page-heading">お客様の声書き込みエラー</h1>
+    <h1 class="page-heading">レビューを書く - エラー</h1>
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-10 col-sm-offset-1">
