--- a/Resource/template/admin/index.twig
+++ b/Resource/template/admin/index.twig
@@ -15,16 +15,16 @@
 {% set menus = ['product', 'product_review'] %}
 {% block title %}商品管理{% endblock %}
 {% block sub_title %}商品レビュー{% endblock %}
-{% form_theme searchForm 'Form/bootstrap_3_horizontal_layout.html.twig' %}
+{% form_theme searchForm 'bootstrap_3_horizontal_layout.html.twig' %}
 
 {% block stylesheet %}
-<link rel="stylesheet" href="{{ app.config.admin_urlpath }}/assets/css/bootstrap-datetimepicker.min.css">
+<link rel="stylesheet" href="{{ asset('/assets/css/bootstrap-datetimepicker.min.css', 'admin') }}">
 {% endblock stylesheet %}
 
 {% block javascript %}
-<script src="{{ app.config.admin_urlpath }}/assets/js/vendor/moment.min.js"></script>
-<script src="{{ app.config.admin_urlpath }}/assets/js/vendor/moment-ja.js"></script>
-<script src="{{ app.config.admin_urlpath }}/assets/js/vendor/bootstrap-datetimepicker.min.js"></script>
+<script src="{{ asset('/assets/js/vendor/moment.min.js', 'admin') }}"></script>
+<script src="{{ asset('/assets/js/vendor/moment-ja.js', 'admin') }}"></script>
+<script src="{{ asset('/assets/js/vendor/bootstrap-datetimepicker.min.js', 'admin') }}"></script>
 <script>
 $(function() {
     $('#product_review_download').click(function(event) {
