--- a/Resource/template/admin/index.twig
+++ b/Resource/template/admin/index.twig
@@ -11,7 +11,8 @@
 {#
 [商品管理]-[商品レビュー]-[一覧・検索]画面
 #}
-{% extends 'default_frame.twig' %}
+{% extends '@admin/default_frame.twig' %}
+
 {% set menus = ['product', 'product_review'] %}
 {% block title %}商品管理{% endblock %}
 {% block sub_title %}商品レビュー{% endblock %}
