--- a/Resource/template/default/index.twig
+++ b/Resource/template/default/index.twig
@@ -14,6 +14,8 @@
 
 {% block stylesheet %}
 <style>
+    .abcdefffffffffff{
+        counter-reset: red;}
     .product_review_page .dl_table {
         margin: 0 0 16px;
     }
